# uno-juegoCartas

./: CMakeLists.txt  Cartas.txt  LICENSE  README.md
src/bl/carta/: Carta.cpp  Carta.h  ListaCarta.cpp  ListaCarta.h  NodoCarta.cpp  NodoCarta.h  PilaCarta.cpp  PilaCarta.h
src/bl/juego/: ReglasJuego.cpp  ReglasJuego.h
src/bl/jugador/: ColaJugador.cpp  ColaJugador.h  Jugador.cpp  Jugador.h  ListaJugador.cpp  ListaJugador.h  ListaJugadorOrdenada.cpp  ListaJugadorOrdenada.h  NodoJugador.cpp  NodoJugador.h
src/tl/: Gestor.cpp  Gestor.h
src/ui/: main.cpp
src/ui/utilitario/: Validar.cpp  Validar.h
